# apps/web-spa/app/routes.ts
@@ -21,6 +21,7 @@ export default [
   ]),
   layout('features/common/components/member-area-layout.tsx', [
     route('account', 'features/account/components/account-page.tsx'),
+    route('cart', 'features/cart/components/cart-page.tsx'),
   ]),
   layout('features/common/components/back-office-layout.tsx', [
     route('admin/members', 'features/admin-members/components/members-list-page.tsx'),
